--- a/VanillaPsycastsExpanded_BiotechAddition/VanillaPsycastsExpanded_BiotechAddition.csproj
+++ b/VanillaPsycastsExpanded_BiotechAddition/VanillaPsycastsExpanded_BiotechAddition.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HarmonyPatch\PsycasterPathPatch.cs" />
+    <Compile Include="Paths\Psymech\Ability_AllMechExplode.cs" />
     <Compile Include="Paths\Psymech\Ability_ApplyDegradeToControlledMech.cs" />
     <Compile Include="Paths\Psymech\Ability_ApplyEmpowerToControlledMech.cs" />
     <Compile Include="Paths\Psymech\Ability_MechExplode.cs" />
